--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -646,3 +646,10 @@ padding-top: 50px;
                 right: 0;
      } 
   }
+  /* web off css start */
+.web_offer .container .row .col-md-4 span{
+  padding: 0px 5px 5px 0px;
+  margin-top: 100px;
+  }
+  .offer span svg{margin-right: 10px; }
+  /* web off css start */
